# nemo

./: .gitignore  README.md  build-package.sh  build-plus-package.sh  build-plus.sh  build.sh  config.h.meson.in  meson.build  meson_options.txt  nemo-extension.gresource.xml  test.sh
action-layout-editor/: meson.build
data/: append_desktop_name_suffix.py  meson.build  nemo-autorun-software.desktop.in  nemo-autostart.desktop.in  nemo.FileManager1.service.in  nemo.desktop.in  nemo.service.in  org.nemo.root.policy.in
data/icons/: meson.build
debian/: changelog  control.in  nemo-data.install.in  nemo.install.in  rules
files/: meson.build
gresources/: meson.build  nemo-file-management-properties.glade  nemo-shell-ui.xml
libnemo-extension/: meson.build
libnemo-private/: meson.build  nemo-debug.c  nemo-debug.h  nemo-file-undo-operations.c  nemo-file.c  nemo-global-preferences.h  org.nemo.gschema.xml
search-helpers/: meson.build
src/: meson.build  nemo-actions.h  nemo-bookmarks-window.c  nemo-desktop-application.c  nemo-desktop-main.c  nemo-desktop-manager.c  nemo-file-management-properties.c  nemo-main-application.c  nemo-main.c  nemo-places-sidebar.c  nemo-preview-pane.c  nemo-preview-pane.h  nemo-progress-ui-handler.c  nemo-properties-window.c  nemo-statusbar.c  nemo-tab-state.c  nemo-tab-state.h  nemo-toolbar.c  nemo-tree-sidebar.c  nemo-view.c  nemo-window-manage-views.c  nemo-window-menus.c  nemo-window-pane.c  nemo-window-pane.h  nemo-window-private.h  nemo-window.c  nemo-window.h
test/: test-dual-pane-integration.py
