option('deprecated_warnings', type : 'boolean', value : false,
       description: 'Show compiler warnings about deprecated features')
option('app_name', type : 'string', value : 'nemo',
       description: 'Application name used for the binary, desktop file, data directory, and About dialog. Use "nemo" for mainline builds or e.g. "nemo-plus" for a co-installable fork. Must be a valid binary/directory name (lowercase, hyphens allowed).')
option('exif', type : 'boolean', value : true,
       description: 'EXIF parsing support (requires libexif)')
option('xmp', type : 'boolean', value : true,
       description: 'XMP support (requires Exempi)')
option('gtk_doc', type : 'boolean', value : false,
       description: 'Generate API reference (requires GTK-Doc)')
option('selinux', type : 'boolean', value : false,
       description: 'SELinux support')
option('empty_view', type : 'boolean', value : false,
       description: 'Enable empty view')
option('tracker',type : 'combo', choices : ['true', 'false', 'auto'], value : 'false',
       description: 'Tracker support')
option('gtk_layer_shell', type : 'boolean', value : false,
       description: 'Use gtk-layer-shell to draw desktop on wayland')
